build/log/idf_py_stdout_output_14184
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D "D:\ESP\ESP project\fingerprint\build\bootloader\esp-idf\esptool_py" && D:\ESP\ESP\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe D:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 "D:/ESP/ESP project/fingerprint/build/bootloader/bootloader.bin""
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache D:\ESP\ESP\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.2-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"D:/ESP/ESP project/fingerprint/build/config" -I"D:/ESP/ESP project/fingerprint/main" -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/newlib/platform_include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include/freertos -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/xtensa/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/esp_additions/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc/esp32 -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/port/esp32/. -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/heap/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/log/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/soc/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32 -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/hal/platform_port/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/hal/esp32/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/hal/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include/esp32 -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/esp32 -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_common/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/soc -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/include/private -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/esp32/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/deprecated_include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps/sntp -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/lwip/src/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/freertos/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/arch -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/sys -I"D:/ESP/ESP project/fingerprint/components/uart_lib/include" -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/deprecated -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/analog_comparator/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/dac/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gpio/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gptimer/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2c/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2s/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/ledc/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/mcpwm/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/parlio/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/pcnt/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/rmt/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdio_slave/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdmmc/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sigma_delta/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/spi/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/temperature_sensor/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/twai/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/uart/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/usb_serial_jtag/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/esp32/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_pm/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_ringbuf/include -I"D:/ESP/ESP project/fingerprint/components/gpio_lib/include" -I"D:/ESP/ESP project/fingerprint/components/user_data/include" -I"D:/ESP/ESP project/fingerprint/components/handle_password/include" -I"D:/ESP/ESP project/fingerprint/components/handle_fingerprint/include" -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_wifi/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_wifi/wifi_apps/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_event/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_phy/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_phy/esp32/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_netif/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mqtt/esp-mqtt/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/tcp_transport/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp-tls -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp-tls/esp-tls-crypto -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/port/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/mbedtls/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/mbedtls/library -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/esp_crt_bundle/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/mbedtls/3rdparty/everest/include -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/mbedtls/3rdparty/p256-m -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -ID:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2/components/esp_timer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap "-fmacro-prefix-map=D:/ESP/ESP project/fingerprint=." -fmacro-prefix-map=D:/ESP/ESP/Espressif/frameworks/esp-idf-v5.2.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c "D:/ESP/ESP project/fingerprint/main/main.c"
D:/ESP/ESP project/fingerprint/main/main.c: In function 'app_main':
D:/ESP/ESP project/fingerprint/main/main.c:35:5: error: implicit declaration of function 'func4'; did you mean 'func3'? [-Werror=implicit-function-declaration]
   35 |     func4();
      |     ^~~~~
      |     func3
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
